fix checkboxes on mobile hopefully

--- a/simplepassgen/css/styles.css
+++ b/simplepassgen/css/styles.css
@@ -214,6 +214,10 @@ body {
         padding: 0;
     }
     input[type=checkbox] {
-        transform: scale(2.5);
+        transform: scale(1.5);
+    }
+    .checkboxResize {
+        margin: 10px;
+        padding: 5px
     }
 }
